feat: adiciona HUGO Theme para a aplicação

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,7 @@
 baseURL: 'https://ligapedd.vercel.app/'
 languageCode: 'pt-br'
 title: 'Liga Pernambucana de Direito Digital'
+theme: 'ligapedd-v2'
 
 # Taxonomies: {
 #     category: "categorias",
